--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,67 @@
-fastapi
-uvicorn
-httpx
-pillow
-pyserial
-python-escpos
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.4
+argcomplete==3.6.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+cmake==4.0.0
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.115.12
+fastapi-cli==0.0.7
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+meson==1.8.0
+ngrok==1.5.0
+ninja==1.11.1.4
+numpy==2.2.5
+opencv-python==4.11.0.86
+orjson==3.10.18
+packaging==25.0
+pango==0.0.1
+pillow==11.2.1
+psutil==7.0.0
+pycairo==1.28.0
+pycups==2.0.4
+pydantic==2.11.5
+pydantic-extra-types==2.10.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyserial==3.5
+pyserial-asyncio==0.6
+pytesseract==0.3.13
+python-barcode==0.15.1
+python-dotenv==1.1.0
+python-escpos==3.1
+python-multipart==0.0.20
+pyusb==1.3.1
+PyYAML==6.0.2
+qrcode==8.1
+requests==2.32.3
+rich==14.0.0
+rich-toolkit==0.14.7
+setuptools==79.0.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+ujson==5.10.0
+urllib3==2.4.0
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
